app/assets/stylesheets/grayscale.scss
@import 'variables.scss';
@import 'mixins.scss';
body {
  font-family: 'Lora', 'Helvetica Neue', Helvetica, Arial, sans-serif;

  position: relative;

  width: 100%;
  height: 100%;

  color: white;
  background-color: black;
}

html {
  width: 100%;
  height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 700;

  margin: 0 0 35px;

  letter-spacing: 1px;
  text-transform: uppercase;
}

p {
  font-size: 21px;
  line-height: 1.5;

  margin: 0 0 25px;
  @media(min-width: 768px) {
    font-size: 21px;
    line-height: 1.6;

    margin: 0 0 35px;
  }
}

.arrow{
  color: #ffffff;
  text-shadow: $black-text-shadow;
  &:hover {color: $primary;}
}

a {
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;

  color: $primary;
  &:focus,
  &:hover {
    text-decoration: none;
  }
}

#mainNav {
  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;

  margin-bottom: 0;

  text-transform: uppercase;

  border-bottom: 1px solid fade-out(white, .7);
  background-color: black;
  .navbar-toggler {
    font-size: 14px;

    padding: 11px;

    color: white;
    border: 1px solid white;
  }
  .navbar-brand {
    font-weight: 700;
    font-size: 24px;
  }

  a {
    color: #ffffff;
    text-shadow: $black-text-shadow;
  }

  a:hover {
    color: $primary;
  }

  .navbar-nav {
    .nav-item {
      -webkit-transition: background 0.3s ease-in-out;
      -moz-transition: background 0.3s ease-in-out;
      transition: background 0.3s ease-in-out;
      &:hover {
        color: fade(white, 80%);
        outline: none;
        background-color: transparent;
      }
      &:active,
      &:focus {
        outline: none;
        background-color: transparent;
      }
    }
  }
  @media(min-width:992px) {
    padding-top: 20px;
    padding-bottom: 20px;

    -webkit-transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
    -moz-transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
    transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
    letter-spacing: 1px;

    border-bottom: none;
    background: transparent;
    &.navbar-shrink {
      padding-top: 10px;
      padding-bottom: 10px;

      border-bottom: 1px solid fade-out(white, .7);
      background: black;
    }
    .nav-link.active {
      outline: none;
      background-color: $primary;
      &:hover {
        color: white;
      }
    }
  }
}

.ruby-color {
  color: $ruby-color
}

.javascript-color {
  color: $javascript-color
}

.reactjs-color {
  color: $reactjs-logo
}

.masthead {
  display: table;

  width: 100%;
  height: auto;
  padding: 200px 0;

  text-align: center;

  color: white;
  background: url('intro-bg.jpg') no-repeat bottom center scroll;
  background-color: black;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  .intro-body {
    display: table-cell;

    vertical-align: middle;
    .brand-heading {
      font-size: 50px;
    }
    .intro-text {
      font-size: 18px;
    }
  }
  @media(min-width:768px) {
    height: 100%;
    padding: 0;
    .intro-body {
      .brand-heading {
        font-size: 100px;
      }
      .intro-text {
        font-size: 22px;
      }
    }
  }
}

//TODO research ways to make these styles DRY
.web-dev-heading {
  display: table;

  width: 100%;
  height: auto;
  padding: 200px 0;

  text-align: center;

  color:#000;
  text-shadow: $white-text-shadow;
  background: url('developer-desk.jpg') no-repeat bottom center scroll;
  background-color: black;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  .intro-body {
    display: table-cell;

    vertical-align: middle;
    .brand-heading {
      font-size: 50px;
    }
    .intro-text {
      font-size: 18px;
    }
  }
  @media(min-width:768px) {
    height: 100%;
    padding: 0;
    .intro-body {
      .brand-heading {
        font-size: 100px;
      }
      .intro-text {
        font-size: 22px;
      }
    }
  }
}

.music-heading {
  display: table;

  width: 100%;
  height: auto;
  padding: 200px 0;

  text-align: center;

  color:#ffffff;
  text-shadow: $black-text-shadow;
  background: url('music-notes.JPG') no-repeat bottom center scroll;
  background-color: black;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  .intro-body {
    display: table-cell;

    vertical-align: middle;
    .brand-heading {
      font-size: 50px;
    }
    .intro-text {
      font-size: 18px;
    }
  }
  @media(min-width:768px) {
    height: 100%;
    padding: 0;
    .intro-body {
      .brand-heading {
        font-size: 100px;
      }
      .intro-text {
        font-size: 22px;
      }
    }
  }
}

.photography-heading {
  display: table;

  width: 100%;
  height: auto;
  padding: 200px 0;

  text-align: center;

  color:#ffffff;
  text-shadow: $black-text-shadow;
  background: url('camera.JPG') no-repeat bottom center scroll;
  background-color: black;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  .intro-body {
    display: table-cell;

    vertical-align: middle;
    .brand-heading {
      font-size: 50px;
    }
    .intro-text {
      font-size: 18px;
    }
  }
  @media(min-width:768px) {
    height: 100%;
    padding: 0;
    .intro-body {
      .brand-heading {
        font-size: 100px;
      }
      .intro-text {
        font-size: 22px;
      }
    }
  }
}

.music-projects{
  border-bottom: 1px solid white;
  padding-bottom: 30px;
}

.btn-circle {
  font-size: 26px;

  width: 55px;
  height: 55px;
  margin-top: 15px;
  line-height: 45px;

  -webkit-transition: background 0.3s ease-in-out;
  -moz-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;

  color: white;
  border: 2px solid white;
  border-radius: 100% !important;
  background: transparent;
  &:focus,
  &:hover {
    color: white;
    outline: none;
    background: fade-out(white, .9);
  }
}

.content-section {
  padding-top: 150px;
  padding-bottom: 150px;
}

.music-background {
  background: url('music-notes.JPG') no-repeat center center scroll;
}

.photography-background {
  background: url('camera.JPG') no-repeat center center scroll;
}

.web-dev-background {
  background: url('developer-desk.jpg') no-repeat center center scroll;
}

.black-text-shadow {
  text-shadow: $black-text-shadow;
}

.project-div-wrapper {
  width: 300px;
  margin: 30px;
  display: inline-block;
  vertical-align: top;
}

.project-div {
  background: #fff;
  border-radius: 4px;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  width: 300px;
  margin: 20px 0;
  position: relative;
  display: inline-block;
  height: 475px;
  overflow: hidden;
  border: 1px solid #ebebeb;
}

.hobby-section {
  color: white;
  background-color: black;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

#map {
  width: 100%;
  height: 300px;
}
@media(min-width:992px) {
  .content-section {
    padding-top: 200px;
    padding-bottom: 200px;
  }
  #map {
    height: 350px;
  }
}

.btn {
  font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 400;

  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  text-transform: uppercase;

  border-radius: 0;
  &:hover {
    color: #ffffff;
  }
}

.btn-default {
  color: #000;
  background-color: $primary;
  &:hover {
    color: #ffffff;
    outline: none;
    background-color: $primary;
  }
}

ul.banner-social-buttons {
  margin-top: 15px;
  @media(max-width: 1199px) {
    margin-top: 15px;
  }
  @media(max-width:767px) {
    li {
      display: block;

      margin-bottom: 20px;
      padding: 0;
      &:last-child {
        margin-bottom: 0;
      }
    }
  }
}

footer {
  padding: 50px 0;
  p {
    font-size: 14px;

    margin: 0;
  }
}

.footer-icons {
  margin: 15px;
}

::-moz-selection {
  background: #fcfcfc;
  background: fade-out(white, .8);
  text-shadow: none;
}

::selection {
  background: #fcfcfc;
  background: fade-out(white, .8);
  text-shadow: none;
}

img::selection {
  background: transparent;
}

img::-moz-selection {
  background: transparent;
}

body {
  -webkit-tap-highlight-color: fade-out(white, .8);
}

